--- a/media/src/main/res/layout/layout_toast.xml
+++ b/media/src/main/res/layout/layout_toast.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
         android:textColor="#FFFFFF"
         android:textSize="17sp" />
 </FrameLayout>
