--- a/media/src/main/res/layout/activity_puzzle.xml
+++ b/media/src/main/res/layout/activity_puzzle.xml
@@ -1,11 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/photos_bg_primary"
     android:fitsSystemWindows="true">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/m_root_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,32 +16,32 @@
             android:layout_height="match_parent"
             android:background="@color/white_photos" />
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/m_bottom_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/photos_bar_primary_translation">
+            android:background="@color/photos_bar_primary_translation"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <com.demons.media.models.puzzle.DegreeSeekBar
                 android:id="@+id/degree_seek_bar"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
-                android:layout_alignParentTop="true"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:visibility="gone" />
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/ll_menu"
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:paddingTop="8dp"
-                android:layout_below="@+id/degree_seek_bar"
                 android:orientation="horizontal"
-                android:visibility="gone">
+                android:paddingTop="8dp"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@+id/degree_seek_bar">
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_replace"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -49,21 +49,21 @@
                     android:padding="2dp"
                     app:srcCompat="@drawable/ic_puzzle_replace_easy_photos" />
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_rotate"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/ic_puzzle_rotate_easy_photos" />
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_mirror"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/ic_puzzle_mirror_easy_photos" />
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_flip"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -72,14 +72,14 @@
                     app:srcCompat="@drawable/ic_puzzle_flip_easy_photos" />
 
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_corner"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/ic_puzzle_corner_easy_photos" />
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_padding"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -92,18 +92,18 @@
                 android:id="@+id/rv_puzzle_template"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/ll_menu"
+                android:paddingTop="6dp"
                 android:paddingBottom="8dp"
-                android:paddingTop="6dp" />
+                app:layout_constraintTop_toBottomOf="@+id/ll_menu" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/rv_puzzle_template"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/rv_puzzle_template">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_template"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -127,58 +127,51 @@
             </LinearLayout>
 
 
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/m_bottom_layout"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignWithParentIfMissing="true"
             android:layout_margin="16dp"
             android:visibility="visible"
             app:backgroundTint="@color/photos_bar_primary_translation"
             app:borderWidth="0dp"
             app:elevation="8dp"
             app:fabSize="mini"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/m_bottom_layout"
             app:srcCompat="@drawable/ic_arrow_down_easy_photos" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/m_top_bar"
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:layout_alignParentTop="true">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.demons.media.ui.widget.PressedTextView
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:gravity="center"
-            android:paddingEnd="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
             android:paddingStart="16dp"
+            android:paddingLeft="16dp"
+            android:paddingEnd="16dp"
+            android:paddingRight="16dp"
             android:text="@string/cancel_easy_photos"
             android:textColor="@color/photos_fg_primary"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:gravity="center"
             android:maxWidth="200dp"
             android:minWidth="56dp"
@@ -186,20 +179,22 @@
             android:text="@string/done_easy_photos"
             android:textColor="@color/photos_fg_accent"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
             android:id="@+id/progress"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <FrameLayout
@@ -210,4 +205,4 @@
         android:focusable="true"
         android:visibility="invisible" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
