--- a/media/src/main/res/layout/activity_puzzle_selector.xml
+++ b/media/src/main/res/layout/activity_puzzle_selector.xml
@@ -27,12 +27,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/m_tool_bar_bottom_line" />
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/m_selector_root"
         android:layout_width="0dp"
-        android:paddingTop="8dp"
         android:layout_height="wrap_content"
         android:background="@color/photos_bar_primary"
+        android:paddingTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
@@ -41,39 +41,35 @@
             android:id="@+id/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:padding="8dp"
-            android:textSize="12sp"
+            android:text="@string/select_puzzle_photos"
             android:textColor="@color/photos_fg_primary"
-            android:layout_alignParentTop="true"
-            android:text="@string/select_puzzle_photos" />
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.demons.media.ui.widget.PressedTextView
             android:id="@+id/tv_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:background="@drawable/bg_menu_done_easy_photos"
             android:gravity="center"
             android:padding="6dp"
             android:textColor="@color/menu_text_photos"
             android:textSize="12sp"
             android:textStyle="bold"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_preview_selected_photos"
             android:layout_width="match_parent"
             android:layout_height="110dp"
-            android:layout_below="@+id/tv_message" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_message" />
 
-    </RelativeLayout>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <RelativeLayout
         android:id="@+id/root_view_album_items"
@@ -100,17 +96,14 @@
             android:scrollbars="vertical" />
     </RelativeLayout>
 
-
     <com.demons.media.ui.widget.PressedTextView
         android:id="@+id/tv_album_items"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
         android:minWidth="70dp"
-        android:paddingEnd="6dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="6dp"
         android:paddingStart="16dp"
+        android:paddingEnd="6dp"
         android:textColor="@color/photos_fg_primary"
         app:layout_constraintBottom_toBottomOf="@+id/m_tool_bar"
         app:layout_constraintLeft_toRightOf="@+id/m_back_line"
@@ -145,7 +138,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/m_tool_bar" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_back"
         android:layout_width="42dp"
         android:layout_height="42dp"
