--- a/media/src/main/res/layout/item_camera_photos.xml
+++ b/media/src/main/res/layout/item_camera_photos.xml
@@ -16,7 +16,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
