--- a/media/src/main/res/layout/item_dialog_album_items.xml
+++ b/media/src/main/res/layout/item_dialog_album_items.xml
@@ -5,12 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingEnd="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
     android:paddingStart="16dp"
     android:paddingTop="16dp">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_album_cover"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -30,7 +28,6 @@
         android:id="@+id/tv_album_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:textColor="@color/album_item_name_photos"
         android:textSize="16sp"
@@ -42,7 +39,6 @@
         android:id="@+id/tv_album_photos_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="2dp"
         android:textColor="@color/album_item_count_photos"
@@ -50,12 +46,11 @@
         app:layout_constraintLeft_toRightOf="@+id/iv_album_cover"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_selected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
