--- a/media/src/main/res/layout/item_preview_photo.xml
+++ b/media/src/main/res/layout/item_preview_photo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,19 +7,18 @@
     <com.demons.media.SubsamplingScaleImageView
         android:id="@+id/iv_long_photo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <com.demons.media.photoview.PhotoView
         android:id="@+id/iv_photo_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_play"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
         android:scaleType="centerInside"
         android:visibility="gone"
         app:srcCompat="@drawable/ic_play_easy_photos" />
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
