--- a/media/src/main/res/layout/item_preview_selected_photos.xml
+++ b/media/src/main/res/layout/item_preview_selected_photos.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="8dp"
-    android:layout_marginRight="8dp">
+    android:layout_marginEnd="8dp">
 
     <com.demons.media.ui.widget.PressedImageView
         android:id="@+id/iv_photo"
