--- a/media/src/main/res/layout/item_puzzle_selector.xml
+++ b/media/src/main/res/layout/item_puzzle_selector.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_photo"
         android:layout_width="0dp"
         android:layout_height="0dp"
