--- a/media/src/main/res/layout/item_puzzle_selector_preview.xml
+++ b/media/src/main/res/layout/item_puzzle_selector_preview.xml
@@ -4,7 +4,7 @@
     android:layout_width="110dp"
     android:layout_height="110dp">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_photo"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -15,7 +15,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_delete"
         android:layout_width="28dp"
         android:padding="4dp"
