--- a/media/src/main/res/layout/item_rv_photos.xml
+++ b/media/src/main/res/layout/item_rv_photos.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <com.demons.media.ui.widget.PressedImageView
         android:id="@+id/iv_photo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="1.2dp"
-        android:scaleType="centerCrop"
         android:background="@color/photos_bar_primary"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -45,12 +45,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="1.6dp"
         android:gravity="center"
-        android:paddingBottom="3dp"
-        android:paddingEnd="8dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
         android:paddingStart="8dp"
+        android:paddingLeft="8dp"
         android:paddingTop="3dp"
+        android:paddingEnd="8dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="3dp"
         android:shadowColor="@color/photos_bar_primary"
         android:shadowDx="0"
         android:shadowDy="0"
@@ -63,17 +63,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_play"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:layout_centerInParent="true"
         android:visibility="gone"
-        tools:visibility="visible"
-        app:srcCompat="@drawable/ic_play_easy_photos" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_play_easy_photos"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
