--- a/media/src/main/res/drawable/bg_select_false_easy_photos.xml
+++ b/media/src/main/res/drawable/bg_select_false_easy_photos.xml
@@ -3,6 +3,6 @@
     <corners android:radius="50dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/photos_bar_primary" />
+        android:color="@color/white_photos" />
 
 </shape>
