--- a/media/src/main/res/layout/item_rv_photos.xml
+++ b/media/src/main/res/layout/item_rv_photos.xml
@@ -20,14 +20,13 @@
 
     <TextView
         android:id="@+id/tv_selector"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_margin="8dp"
         android:background="@drawable/bg_select_true_easy_photos"
         android:gravity="center"
         android:textColor="@color/menu_text_photos"
         android:textSize="12sp"
-        android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,4 +75,17 @@
         app:srcCompat="@drawable/ic_play_easy_photos"
         tools:visibility="visible" />
 
+    <View
+        android:id="@+id/selected_bg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="1.2dp"
+        android:background="#80000000"
+        android:scaleType="centerCrop"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="h,1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
