--- a/media/src/main/res/layout/activity_photos.xml
+++ b/media/src/main/res/layout/activity_photos.xml
@@ -128,7 +128,10 @@
             android:id="@+id/tv_album_items"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:ellipsize="end"
             android:gravity="center"
+            android:lines="1"
+            android:maxEms="5"
             android:minWidth="70dp"
             android:paddingStart="16dp"
             android:paddingEnd="6dp"
