--- a/media/src/main/res/layout/item_rv_photos.xml
+++ b/media/src/main/res/layout/item_rv_photos.xml
@@ -24,7 +24,6 @@
         android:layout_height="0dp"
         android:layout_margin="1.2dp"
         android:background="#80000000"
-        android:scaleType="centerCrop"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"
@@ -88,4 +87,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_play_easy_photos"
         tools:visibility="visible" />
+
+    <View
+        android:id="@+id/no_selected_bg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="1.2dp"
+        android:background="#80000000"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="h,1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
